# jaxctx

./: README.md  pyproject.toml  pytest.ini  requirements-tests.txt  requirements.txt
src/jaxctx/: context.py
src/jaxctx/priors/: prior.py  special_priors.py
src/jaxctx/priors/tests/: test_prior.py
src/jaxctx/tests/: test_context.py
tests/: test_context.py  test_prior.py
